run and test the build on JDK8 and JDK9 (added ability to skip failing tests, turned on for now), integrating some latest libraries Signed-off-by:Lukas Jungmann <lukas.jungmann@oracle.com>